--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 
 spring.datasource.url= jdbc:mysql://localhost:3306/stockdb?useSSL=false
 spring.datasource.username= root
-spring.datasource.password= Sonelgaz.1
+spring.datasource.password= dbPassword
 
 spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.MySQL5InnoDBDialect
 
