--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 
-spring.datasource.url= jdbc:mysql://localhost:3306/stockdb?useSSL=false
+spring.datasource.url= jdbc:mysql://localhost:3306/stockdb?useUnicode=true&characterEncoding=UTF-8&allowPublicKeyRetrieval=true&useSSL=false
 spring.datasource.username= root
-spring.datasource.password= dbPassword
+spring.datasource.password= Sonelgaz.1
 
 spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.MySQL5InnoDBDialect
 
